err/transcribo.err
Listing '.'...
Listing './bin'...
Compiling './bin/transcribe.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Transcribo-0.7.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/transcribo'...
Listing './lib/python3.5/site-packages/transcribo/renderer'...
Compiling './lib/python3.5/site-packages/transcribo/renderer/content.py'...
***   File "./lib/python3.5/site-packages/transcribo/renderer/content.py", line 15
    ref_re = re.compile(ur"\{r\d+\}")
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/transcribo/renderer/frames.py'...
***   File "./lib/python3.5/site-packages/transcribo/renderer/frames.py", line 122
    raise RenderingError, 'Nothing to render.'
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/transcribo/renderer/lines.py'...
***   File "./lib/python3.5/site-packages/transcribo/renderer/lines.py", line 6
    fillchar_re = re.compile(ur'\{f.\}')
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/transcribo/styles'...
Listing './share'...
Listing './share/python-wheels'...
